B: Pawns can attack